<resources>
    <string name="app_name">Inventory Stage 2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Title text for the empty view[CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog message to ask the user to confirm call for order the current item [CHAR LIMIT=NONE] -->
    <string name="order_dialog_msg">Call </string>

    <!-- Dialog button text for the option to confirm order call the current item [CHAR LIMIT=20] -->
    <string name="ok">Ok</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">Item saved</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Label for editor item name [CHAR LIMIT=20] -->
    <string name="item_name">Item name</string>

    <!-- Label for editor item price [CHAR LIMIT=20] -->
    <string name="item_price">Price</string>

    <!-- Label for editor item quantity [CHAR LIMIT=20] -->
    <string name="item_quantity">Quantity</string>

    <!-- Label for editor item supplier name [CHAR LIMIT=20] -->
    <string name="item_supplier">Supplier</string>

    <!-- Label for editor item supplier phone number [CHAR LIMIT=20] -->
    <string name="item_supplier_phone">tel: </string>

    <!-- Label for editor item supplier name [CHAR LIMIT=20] -->
    <string name="item_supplier_email">email: </string>

    <!-- Label for editor item barcode [CHAR LIMIT=20] -->
    <string name="item_barcode">barcode: </string>

    <!-- Dummy item name [CHAR LIMIT=20] -->
    <string name="dummy_item_name">Coca Cola 0.33l</string>

    <!-- Dummy item price [CHAR LIMIT=20] -->
    <string name="dummy_item_price">2.5</string>

    <!-- Dummy item quantity [CHAR LIMIT=20] -->
    <string name="dummy_item_quantity">50</string>

    <string name="barcode_not_found">Barcode not found</string>
    <string name="barcode_key_code" translatable="false">BARCODE</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="enter_valid_phone">Please enter a valid phone number !</string>
    <string name="store_name_key" translatable="false">store_name</string>
    <string name="store_name">Store name</string>
    <string name="store_name_default_value">Inventory stage 2</string>
    <string name="order_by_name_key" translatable="false">order_by_name</string>
    <string name="show_images_key" translatable="false">show_items_image</string>
    <string name="show_images_value">Show items images in the list</string>
    <string name="order_by_key" translatable="false">order_by_name</string>
    <string name="order_by_name_value">Order by name</string>
    <string name="general_store">General Store</string>
    <string name="save">Save</string>
    <string name="order">Order</string>
    <string name="number_of_items">Number of items:</string>
    <string name="total_value">Total value:</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="rows_deleted">" rows deleted!"</string>


</resources>
